--- a/includes/theme-switch.html
+++ b/includes/theme-switch.html
@@ -17,15 +17,20 @@
                 let light = 'light';
                 let dark = 'dark';
 
+                /* 
+                    Initiate theme based on localStorage.
+                    First time visitors will be in light mode.
+                */
                 if (get_local_style() === 'null') {
-                    set_local_style(dark);
-                    update_theme(dark);
-                }
-                else {
                     set_local_style(light);
                     update_theme(light);
                 }
+                else {
+                    set_local_style(dark);
+                    update_theme(dark);
+                }
     
+                /* Cause switch to alternate between light and dark */
                 sw.addEventListener('click', () => {
                     if (get_local_style() === light) {
                         set_local_style(dark);
@@ -46,7 +51,7 @@
                 localStorage.setItem('style', style);
             }
     
-            /* Update current page's theme based on the theme set in local storage */
+            /* Update current page's theme based on the theme set in localtorage */
             function update_theme(theme) {
                 let this_theme = document.getElementById('theme-switcher-id');
                 this_theme.href = `../css/themes/${theme}.css`;
@@ -96,10 +101,9 @@
                 Duis id magna at mauris finibus dictum ut consequat tellus. Donec interdum felis at ullamcorper ullamcorper. Vestibulum felis sem, vehicula in odio in, volutpat faucibus dui. Cras sit amet nulla commodo, vestibulum nisi a, eleifend eros. Praesent nec velit suscipit, aliquam lacus id, vestibulum enim. Nulla ac porttitor nunc, vitae maximus turpis. Nunc molestie, turpis eget convallis convallis, lorem mauris tincidunt nisi, vitae imperdiet mauris libero id nunc. Integer vel nulla venenatis, eleifend dolor ac, lacinia odio. Nullam viverra elit ante, vel fringilla nisi pulvinar id. Praesent ornare erat semper, sollicitudin ligula a, mollis libero. Nulla tincidunt ante at magna sodales elementum. 
             </p>
             <p>
-                Curabitur et quam eget massa ultricies pulvinar. Aliquam id volutpat velit. Sed ut laoreet elit. Praesent sed urna vitae leo scelerisque luctus. Pellentesque et viverra purus. Maecenas consectetur malesuada leo a euismod. Aliquam at sapien mattis, rhoncus arcu in, tincidunt neque. Aenean eu sapien id sapien interdum dignissim sit amet in nisi. Donec ac orci hendrerit, tristique neque in, euismod ipsum. Vestibulum ac arcu orci. 
+                Curabitur et quam <a href="www.google.com" target="_blank">eget massa ultricies pulvinar</a>. Aliquam id volutpat velit. Sed ut laoreet elit. Praesent sed urna vitae leo scelerisque luctus. Pellentesque et viverra purus. Maecenas consectetur malesuada leo a euismod. Aliquam at sapien mattis, rhoncus arcu in, tincidunt neque. Aenean eu sapien id sapien interdum dignissim sit amet in nisi. Donec ac orci hendrerit, tristique neque in, euismod ipsum. Vestibulum ac arcu orci. 
             </p>
             <p>
-                <a href="www.google.com">test</a>
                 Maecenas venenatis lectus eu dui cursus tincidunt. Fusce maximus eros turpis, vel fringilla nunc rutrum at. Vivamus eget urna in enim dignissim gravida. Mauris a faucibus lacus. Fusce ligula ex, venenatis at urna vestibulum, commodo vulputate lacus. Sed dapibus magna vel sem porttitor vulputate. Morbi dignissim ante ex, nec convallis velit accumsan a. In sit amet molestie enim. Donec in mattis est, in congue felis. Proin felis est, volutpat consectetur dictum vitae, interdum a nisl. Aenean consectetur at odio non luctus. 
             </p>
         </div>
