--- a/css/themes/light.css
+++ b/css/themes/light.css
@@ -18,8 +18,10 @@ body {
 
 a {
     color: var(--link-color);
+    border: 2px solid transparent;
 }
 
 a:hover, a:focus {
     color: var(--link-hover-color);
+    border: 2px solid var(--link-hover-color);
 }
