--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -1,13 +1,9 @@
 :root {
     --back-color: #1F1F1F;
-    --text-color: white;
+    --text-color: #ffffff;
     --link-color: #7aa6da;
     --link-hover-color: #FFB224;
-}
-
-body {
-    background-color: var(--back-color);
-    color: var(--text-color);
+    --github-topnav-icon: url(/media/GitHub-Mark-32px-white.png);
 }
 
 a {
@@ -18,4 +14,22 @@ a {
 a:hover, a:focus {
     color: var(--link-hover-color);
     border: 2px solid var(--link-hover-color);
+}
+
+body {
+    background-color: var(--back-color);
+    color: var(--text-color);
+}
+
+h1, h2, h3, h4{
+    color: var(--text-color);
+}
+
+.github-link {
+    background-image: var(--github-topnav-icon);
+    background-repeat: no-repeat;
+    background-position: left center;
+
+    background-size: 20px 20px;
+    padding-left: 25px;
 }
