--- a/css/themes/light.css
+++ b/css/themes/light.css
@@ -3,17 +3,17 @@
     --text-color: #252525;
     --link-color: #1515d1;
     --link-hover-color: #7A5000;
+    --github-topnav-icon: url(/media/GitHub-Mark-32px-black.png);
 
-    /* Default styling */
+    /* 
+        Default Styling
+        For first time visitors, main CSS will default to the values defined below.
+    */
     --light-back-color: var(--back-color);
     --light-text-color: var(--text-color);
     --light-link-color: var(--link-color);
     --light-link-hover-color: var(--link-hover-color);
-}
-
-body {
-    background-color: var(--back-color);
-    color: var(--text-color);
+    --light-github-topnav-icon: var(--github-topnav-icon);
 }
 
 a {
@@ -24,4 +24,22 @@ a {
 a:hover, a:focus {
     color: var(--link-hover-color);
     border: 2px solid var(--link-hover-color);
+}
+
+body {
+    background-color: var(--back-color);
+    color: var(--text-color);
+}
+
+h1, h2, h3, h4{
+    color: var(--text-color);
+}
+
+.github-link {
+    background-image: var(--github-topnav-icon);
+    background-repeat: no-repeat;
+    background-position: left center;
+
+    background-size: 20px 20px;
+    padding-left: 25px;
 }
