--- a/includes/theme-switch.html
+++ b/includes/theme-switch.html
@@ -1,5 +1,5 @@
 <link href="/css/styles.css" type="text/css" rel="stylesheet">
 
 <div id="theme-switch-orb">
-        <div id="theme-switch">Switch</div>
+        <div id="theme-switch">In-progress</div>
 </div>
