--- a/includes/theme-switch.html
+++ b/includes/theme-switch.html
@@ -1,5 +1,8 @@
 <link href="/css/styles.css" type="text/css" rel="stylesheet">
 
 <div id="theme-switch-orb">
-        <div id="theme-switch">In-progress</div>
+        <div id="theme-switch" class="flex">
+                <div class="flex-item">sun</div>
+                <div class="flex-item">moon</div>
+        </div>
 </div>
