--- a/css/themes/light.css
+++ b/css/themes/light.css
@@ -3,7 +3,7 @@
     --text-color: #252525;
     --link-color: #1515d1;
     --link-hover-color: #7A5000;
-    --github-topnav-icon: url(/media/GitHub-Mark-32px-black.png);
+    --github-icon: url(/media/icons/GitHub-Mark-32px-black.png);
 
     /* 
         Default Styling
@@ -13,7 +13,7 @@
     --light-text-color: var(--text-color);
     --light-link-color: var(--link-color);
     --light-link-hover-color: var(--link-hover-color);
-    --light-github-topnav-icon: var(--github-topnav-icon);
+    --light-github-icon: var(--github-icon);
 }
 
 a {
@@ -35,10 +35,19 @@ h1, h2, h3, h4{
 }
 
 .github-link {
-    background-image: var(--github-topnav-icon);
+    background-image: var(--github-icon);
     background-repeat: no-repeat;
     background-position: left center;
 
     background-size: 20px 20px;
     padding-left: 25px;
+}
+
+.home-github-link {
+    background-image: var(--github-icon);
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 27px 27px;
+    
+    padding-left: 35px;
 }
