--- a/includes/theme-switch.html
+++ b/includes/theme-switch.html
@@ -1,8 +1,5 @@
 <link href="/css/styles.css" type="text/css" rel="stylesheet">
 
-<div id="theme-switch-orb">
-        <div id="theme-switch" class="flex">
-                <div class="flex-item">sun</div>
-                <div class="flex-item">moon</div>
-        </div>
+<div class="flex">
+    <div class="flex-item" id="theme-switch"></div>
 </div>
