--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,13 @@
     padding-left: 35px;
 }
 
+.home-nav {
+    border: 2px solid transparent;
+    padding: 0px 5px;
+
+    border-radius: 7px;
+}
+
 .home-resume-link {
     background-image: url(/media/icons/resume-icon.png);
     background-repeat: no-repeat;
@@ -187,7 +194,9 @@ a {
     text-decoration: none;
 
     border: 2px solid transparent;
-    margin: 0 0 0 0;
+    border-radius: 7px;
+    margin: 0;
+    padding: 0 2px;
     transition: border .15s ease-in-out, color .15s ease-in-out;
 }
 
@@ -205,7 +214,7 @@ body {
 
     margin: 10px auto;
     max-width: 1150px;
-    padding: 0 0;
+    padding: 0;
 
     background-color: var(--back-color);
     transition-duration: .1s;
