--- a/includes/top-nav.html
+++ b/includes/top-nav.html
@@ -2,5 +2,5 @@
     <a class="home-nav" tabindex="1" href="index.html">Home</a>
     <a class="home-nav" tabindex="2" href="about.html">About Me</a>
     <a class="home-nav" tabindex="3" href="resume.html" class="resume-link">Resume</a>
-    <a class="home-nav" tabindex="4" href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
+    <a class="home-nav" tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
 </div>
