Update theme switch

--- a/css/root.css
+++ b/css/root.css
@@ -82,14 +82,14 @@
 
     text-align: center;
 
-    background-image: var(--theme-switch-icon);
+    background-image: url(/media/icons/sun-Freepik.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50px 50px;
 }
 
 .github-link {
-    background-image: var(--github-icon);
+    background-image: url(/media/icons/GitHub-Mark-32px-black.png);
     background-repeat: no-repeat;
     background-position: left center;
 
@@ -102,7 +102,7 @@
 }
 
 .home-github-link {
-    background-image: var(--github-icon);
+    background-image: url(/media/icons/GitHub-Mark-32px-black.png);
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 27px 27px;
@@ -184,7 +184,7 @@
 
 .type-writer {
     text-align: center;
-    color: var(--text-color);
+    color: #252525;
 
     font-family: 'Inconsolata', monospace;
     font-size: 35px;
@@ -207,25 +207,24 @@
 }
 
 a {
-    color: var(--link-color);
+    color: #1515d1;
     text-decoration: none;
 
     border: 2px solid transparent;
     border-radius: 7px;
     margin: 0;
     padding: 0 2px;
-    transition: border .15s ease-in-out, color .15s ease-in-out;
 }
 
 a:hover, a:focus {
-    color: var(--link-hover-color);
+    color: #7A5000;
     text-decoration: none;
 
-    border: 2px solid var(--link-hover-color);
+    border: 2px solid #7A5000;
 }
 
 body {
-    color: var(--text-color);
+    color: #252525;
     font-family: 'Open Sans', sans-serif;
     font-size: 17px;
 
@@ -233,12 +232,11 @@ body {
     max-width: 1150px;
     padding: 0;
 
-    background-color: var(--back-color);
-    transition-duration: .1s;
+    background-color: #ffffff;
 }
 
 footer {
-    color: var(--text-color);
+    color: #252525;
     font-size: 10px;
 
     text-align: center;
@@ -246,9 +244,9 @@ footer {
     margin: 350px auto 40px auto;
 }
 
-h1, h2, h3, h4{
+h1, h2, h3, h4, #about-type-writer{
     font-family: 'Nunito', sans-serif;
-    color: var(--text-color);
+    color: #252525;
 }
 
 h2 {
