--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -7,29 +7,29 @@
     --theme-switch-icon: url(/media/icons/newmoon-Freepik.png);
 }
 
-#theme-switch {
+body.dark-theme #theme-switch {
     background-image: var(--theme-switch-icon);
 }
 
-a {
+body.dark-theme a {
     color: var(--link-color);
 }
 
-a:hover, a:focus {
+body.dark-theme a:hover, a:focus {
     color: var(--link-hover-color);
     border: 2px solid var(--link-hover-color);
 }
 
-body {
+body.dark-theme {
     background-color: var(--back-color);
     color: var(--text-color);
 }
 
-h1, h2, h3, h4{
+body.dark-theme h1, h2, h3, h4, .type-writer, footer {
     color: var(--text-color);
 }
 
-.github-link {
+body.dark-theme .github-link {
     background-image: var(--github-icon);
     background-repeat: no-repeat;
     background-position: left center;
@@ -38,7 +38,7 @@ h1, h2, h3, h4{
     padding-left: 25px;
 }
 
-.home-github-link {
+body.dark-theme .home-github-link {
     background-image: var(--github-icon);
     background-repeat: no-repeat;
     background-position: left center;
