--- a/css/root.css
+++ b/css/root.css
@@ -2,6 +2,7 @@
 
 #money_saver, #pushups_gif {
     max-width: 500px;
+    min-width: 250px;
     height: auto;
     display: block;
 }
@@ -158,7 +159,6 @@ body {
 
     margin: 10px auto;
     max-width: 1150px;
-    padding: 0;
 
     background-color: #ffffff;
 }
@@ -192,11 +192,14 @@ h2 {
     }
 
     body {
-        max-width: 350px;
-        padding: 10px;
+        margin: 10px 15px;
     }
+}
 
-    #money_saver, #pushups_gif {
-        min-width: 300px;
+@media screen and (min-width: 450px) and (max-width: 1150px;) {
+
+
+    body {
+        margin: 10px 15px;
     }
 }
