--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -7,10 +7,6 @@
     --theme-switch-icon: url(/media/icons/newmoon-Freepik.png);
 }
 
-body.dark-theme #theme-switch {
-    background-image: var(--theme-switch-icon);
-}
-
 body.dark-theme {
     background-color: var(--back-color);
     color: var(--text-color);
@@ -30,13 +26,13 @@ body.dark-theme .home-github-link {
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 27px 27px;
-    
+
     padding-left: 35px;
 }
 
 body.dark-theme .moon {
     display: block;
-    
+
     height: 55px;
     width: 55px;
     border-radius: 50px;
@@ -46,16 +42,31 @@ body.dark-theme .sun {
     display: none;
 }
 
+body.dark-theme .theme-switch {
+    border: 2px solid transparent;
+}
+
+body.dark-theme .theme-switch::after {
+    content: 'Light';
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    color: var(--text-color);
+}
+
 body.dark-theme a {
     color: var(--link-color);
 }
 
-body.dark-theme a:hover, a:focus {
+body.dark-theme a:focus {
     color: var(--link-hover-color);
     border: 2px solid var(--link-hover-color);
 }
 
-body.dark-theme footer{
+body.dark-theme a:hover {
+    color: var(--link-hover-color);
+}
+
+body.dark-theme footer {
     color: var(--text-color);
 }
 
