--- a/css/root.css
+++ b/css/root.css
@@ -108,7 +108,6 @@
 .top-nav {
     display: flex;
     flex-flow: row nowrap;
-
     font-size: 20px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
@@ -118,11 +117,8 @@
     list-style: none;
 }
 
-.top-nav a {
+.top-nav li {
     flex: 1 0 1;
-
-    display: flex;
-    align-items: center;
 }
 
 .main-menu {
@@ -200,16 +196,24 @@ h2 {
     border-right: none;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 647px) {
+    .main-logo {
+        align-self: center;
+    }
+
     .top-container {
         flex-flow: column nowrap;
         align-items: flex-end;
         margin: 0 10px 0 0;
     }
 
+    .top-controls {
+        flex-flow: column nowrap;
+        gap: 0px;
+    }
+
     .top-nav {
         flex-flow: column nowrap;
-        align-items: flex-start;
     }
 
     body {
@@ -217,10 +221,16 @@ h2 {
     }
 }
 
-@media screen and (min-width: 450px) and (max-width: 1170px) {
+@media screen and (min-width: 648px) and (max-width: 1049px) {
+    .top-container {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+}
 
-
+@media screen and (max-width: 1190px) {
     body {
-        margin: 10px 15px;
+        margin: 10px 20px;
     }
 }
