--- a/css/root.css
+++ b/css/root.css
@@ -1,8 +1,48 @@
+:root {
+    --fonts: "Lato", "Helvetica Neue", Arial, sans-serif;
+}
+
+#interests {
+    margin: 90px 0 0 0;
+}
+
 #money_saver, #pushups_gif {
-    max-width: 500px;
+    max-width: 550px;
     min-width: 250px;
-    height: auto;
+    height: 100%;
+    width: 100%;
     display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+#nav-toggle span, #nav-toggle span::before, #nav-toggle span::after {
+    width: 28px;
+    height: 4px;
+    float: left;
+    display: block;
+    background: #000;
+    position: relative;
+    text-indent: -9000px;
+}
+
+#nav-toggle span {
+    margin: 8px 0;
+}
+
+#nav-toggle span::before, #nav-toggle span::after {
+    content: '';
+    position: absolute;
+}
+
+#nav-toggle span::before {
+    top: -8px;
+}
+
+#nav-toggle span::after {
+    bottom: -8px;
 }
 
 #resume {
@@ -13,7 +53,7 @@
 }
 
 .description {
-    max-width: 500px;
+    max-width: 550px;
 }
 
 .github-link {
@@ -47,6 +87,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .interest .description {
@@ -87,7 +128,7 @@
 
 .theme-switch::after {
     content: 'Dark';
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--fonts);
     font-weight: bold;
 }
 
@@ -109,7 +150,7 @@
     display: flex;
     flex-flow: row nowrap;
     font-size: 20px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--fonts);
     font-weight: bold;
 
     gap: 35px;
@@ -150,7 +191,9 @@
 a {
     color: #1515d1;
     text-decoration: none;
-
+    font-size: 1.3rem;
+    line-height: 1.3;
+    font-weight: 400;
     border: 2px solid transparent;
     border-radius: 7px;
     margin: 0;
@@ -171,8 +214,10 @@ a:hover {
 
 body {
     color: #252525;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 17px;
+    font-weight: 400;
+    font-family: var(--fonts);
+    font-size: 1.3rem;
+    line-height: 2.8rem;
 
     margin: 10px auto;
     max-width: 1150px;
@@ -180,7 +225,8 @@ body {
     background-color: #ffffff;
 }
 
-footer {
+footer,
+footer a {
     color: #252525;
     font-size: 10px;
 
@@ -213,7 +259,15 @@ h2 {
     }
 
     .top-nav {
+        display: none;
         flex-flow: column nowrap;
+    }
+
+    #nav-toggle {
+        display: block;
+        float: right;
+        padding: 20px;
+        cursor: pointer;
     }
 
     body {
