--- a/css/root.css
+++ b/css/root.css
@@ -14,11 +14,30 @@
     display: block;
 }
 
+#nav-panel {
+    display: none;
+    overflow: hidden;
+    background: #f5f5f5;
+    width: 50%;
+    top: 0;
+    position: absolute;
+    right: 0;
+    height: 100vh !important;
+    -webkit-transition: all 100ms ease-in-out;
+    -moz-transition: all 100ms ease-in-out;
+    -ms-transition: all 100ms ease-in-out;
+    -o-transition: all 100ms ease-in-out;
+    transition: all 100ms ease-in-out;
+    z-index: 1000;
+    max-width: 1600px;
+}
+
 #nav-toggle {
     display: none;
 }
 
-#nav-toggle span, #nav-toggle span::before, #nav-toggle span::after {
+#nav-toggle span, #nav-toggle span::before,
+#nav-toggle span::after {
     width: 28px;
     height: 4px;
     float: left;
@@ -32,7 +51,8 @@
     margin: 8px 0;
 }
 
-#nav-toggle span::before, #nav-toggle span::after {
+#nav-toggle span::before,
+#nav-toggle span::after {
     content: '';
     position: absolute;
 }
@@ -43,6 +63,36 @@
 
 #nav-toggle span::after {
     bottom: -8px;
+}
+
+#nav-toggle span,
+#nav-toggle span:before,
+#nav-toggle span:after {
+    -webkit-transition: all 100ms ease-in-out;
+    -moz-transition: all 100ms ease-in-out;
+    -ms-transition: all 100ms ease-in-out;
+    -o-transition: all 100ms ease-in-out;
+    transition: all 100ms ease-in-out;
+}
+
+#nav-toggle.active span {
+    background-color: transparent;
+}
+
+#nav-toggle.active span::before,
+#nav-toggle.active span::after {
+    top: 0;
+}
+
+#nav-toggle.active span:before {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+#nav-toggle.active span::after {
+    transform: translateY(-10px) rotate(-45deg);
+    -webkit-transform: translateY(-10px) rotate(-45deg);
+    top: 10px;
 }
 
 #resume {
@@ -110,8 +160,8 @@
 .sun {
     display: block;
 
-    height: 55px;
-    width: 55px;
+    height: 40px;
+    width: 40px;
 }
 
 .text {
@@ -181,6 +231,10 @@
 
 .moon {
     display: none;
+    
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
 }
 
 .nav-controls {
@@ -217,7 +271,7 @@ body {
     font-weight: 400;
     font-family: var(--fonts);
     font-size: 1.3rem;
-    line-height: 2.8rem;
+    line-height: 2.6rem;
 
     margin: 10px auto;
     max-width: 1150px;
@@ -225,18 +279,22 @@ body {
     background-color: #ffffff;
 }
 
-footer,
-footer a {
+footer {
     color: #252525;
     font-size: 10px;
+    line-height: 1rem;
 
     text-align: center;
 
     margin: 350px auto 40px auto;
 }
 
+footer a {
+    font-size: 10px;
+}
+
 h2 {
-    border: .01em solid #000000;
+    border: .01em solid #252525;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -247,8 +305,12 @@ h2 {
         align-self: center;
     }
 
+    .theme-switch {
+        padding: 0;
+    }
+
     .top-container {
-        flex-flow: column nowrap;
+        flex-flow: row nowrap;
         align-items: flex-end;
         margin: 0 10px 0 0;
     }
@@ -266,7 +328,7 @@ h2 {
     #nav-toggle {
         display: block;
         float: right;
-        padding: 20px;
+        padding: 10px 0;
         cursor: pointer;
     }
 
